--- a/index.html
+++ b/index.html
@@ -61,7 +61,57 @@
     <!-- Intro End -->
 
 
-    
+    <!-- Exercise Section Start -->
+    <section class="exercise">
+        <!-- row-1 -->
+        <div class="container">
+            <div class=" row g-4 ">
+                <div class="col-lg-6 ">
+                    <img src="./images/fitness/feature-2.jpg" alt="">
+                </div>
+                <div class="col-lg-6  col-style">
+                    <h3 class="text-start mb-4 ">KNOWLEDGE , SKILL & HARD WORK</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate laborum ducimus impedit,
+                        excepturi tempore voluptates amet exercitationem quaerat nihil sunt natus eos fugit tempora
+                        blanditiis ad atque, nisi iste eligendi minima facere enim unde qui? Et exercitationem atque hic
+                        fuga nihil dolorem aliquam libero perferendis, deserunt eveniet voluptate placeat dolores!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam similique facere officiis iusto,
+                        accusantium ad ipsa quam at ratione fugiat pariatur corrupti earum explicabo praesentium
+                        excepturi
+                        quidem enim ipsum minus.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- -row-2--->
+        <div class="container mt-5">
+            <div class=" row g-4 ">
+                <div class="col-lg-6  col-style-2">
+                    <h3 class="text-start  ">KEEP PATIENT & WORK SILENT</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate laborum ducimus impedit,
+                        excepturi tempore voluptates amet exercitationem quaerat nihil sunt natus eos fugit tempora
+                        blanditiis ad atque, nisi iste eligendi minima facere enim unde qui? Et exercitationem atque hic
+                        fuga nihil dolorem aliquam libero perferendis, deserunt eveniet voluptate placeat dolores!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam similique facere officiis iusto,
+                        accusantium ad ipsa quam at ratione fugiat pariatur corrupti earum explicabo praesentium
+                        excepturi
+                        quidem enim ipsum minus.</p>
+                </div>
+                <div class="col-lg-6 ">
+                    <iframe class="video" width="100%" height="100%" src="https://www.youtube.com/embed/d8Cmw1UyViQ"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+    <!-- Exercise Section End -->
+
+
+
 
 
     <!-- Bootstrap JS -->
