--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container mt-5">
             <div class=" row g-4 ">
                 <div class="col-lg-6  col-style-2">
-                    <h3 class="text-start  ">KEEP PATIENT & WORK SILENT</h3>
+                    <h3 class="text-start ">KEEP PATIENT & WORK SILENT</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate laborum ducimus impedit,
                         excepturi tempore voluptates amet exercitationem quaerat nihil sunt natus eos fugit tempora
                         blanditiis ad atque, nisi iste eligendi minima facere enim unde qui? Et exercitationem atque hic
@@ -109,6 +109,50 @@
 
     </section>
     <!-- Exercise Section End -->
+
+    <!-- Exercise Type section start -->
+    <section class="exercise-type">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-lg-4">
+                    <div class="card">
+                        <img src="./images/fitness/leging.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Mixed Martial Arts</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti
+                                distinctio exercitationem laboriosam deleniti, labore illo explicabo sequi ipsam?
+                                Ratione.Loveraryhdhh </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <img src="./images/fitness/musculing.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Gym</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum dolorum
+                                necessitatibus, dignissimos rem accusamus obcaecati. Quae eius nobis commodi
+                                jdkdjdjd</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card">
+                        <img src="./images/fitness/boxing.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Boxing</h5>
+                            <p class="card-text ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum
+                                dolorum
+                                necessitatibus, dignissimos rem accusamus obcaecati. Quae eius nobis commodi
+                                lovelyar</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Exercise Type section End -->
 
 
 
