--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- FavIcons CSS -->
     <link rel="shortcut icon" href="./images/fitness/logo-2.png" type="image/x-icon">
+    <!-- Fontawesome Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 
 <body>
@@ -20,7 +23,7 @@
     <!-- Topbar Section Start -->
     <section class="topbar">
         <!-- Navigation Menu -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="./images/fitness/logo.png" alt="" height="40vh">
@@ -154,6 +157,38 @@
     </section>
     <!-- Exercise Type section End -->
 
+
+    <!-- schedule Section Start -->
+    <section class="schedule">
+        <div class="row g-0">
+            <div class="col-lg-6">
+                <img src="./images/fitness/feature.png" alt="">
+            </div>
+            <div class="col-lg-6">
+                <div class="row g-0">
+                    <div class="col-lg-4">
+                        <i class="fas fa-heartbeat"></i>
+                    </div>
+                    <div class="col-lg-8 schedule-content">
+                        <h5>Free Consultation</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, non. Lorem ipsum dolor
+                            sit amet.Lovely yar Loremo. </p>
+                    </div>
+                </div>
+                <div class="row g-0">
+                    <div class="col-lg-4 mt-5">
+                        <i class="far fa-clock"></i>
+                    </div>
+                    <div class="col-lg-8 mt-5 schedule-content">
+                        <h5>Flexible Time</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, consequatur. Lorem ipsum
+                            dolor sit amet. Loremo. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- schedule Section End -->
 
 
 
