--- a/index.html
+++ b/index.html
@@ -191,6 +191,73 @@
     <!-- schedule Section End -->
 
 
+    <!-- Search Start -->
+    <div class="container text-center search">
+        <h3>Join Our Free Trial !</h3>
+        <p>Follow our newsleter and get 30 days free trial</p>
+
+        <form class="form">
+            <div class="input-group" style="width:50%">
+                <input type="text" class="form-control" placeholder="Enter your email.." aria-label="Username"
+                    aria-describedby="basic-addon1">
+                <span class="input-group-text" id="basic-addon1">Subscribe</span>
+            </div>
+        </form>
+
+    </div>
+    <!-- Search End -->
+
+
+
+    <!-- Footer Start -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row g-0">
+                <div class="col-sm-12 col-lg-3">
+                    <div class="card">
+                        <img src="./images/fitness/logo.png" alt="" class="card-img">
+                        <div class="card-body">
+                            <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio id
+                                ipsa consequatur alias laborum maiores assumenda quo minus repellat perferendis iure
+                                sequi quidem eaque, iusto ea similique sapiente. Ratione, enim. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 feature">
+                    <ul>
+                        <h6>Features</h6>
+                        <li>Certified Trainers</li>
+                        <li>Free Consultation</li>
+                        <li>Flexible Time</li>
+                        <li>30 Days Free Trials</li>
+                    </ul>
+                </div>
+                <div class=" col-lg-3 contact">
+                    <ul>
+                        <h6>Contact Us</h6>
+                        <li><i class="fas fa-phone-square-alt"></i> <span>+8801601091999</span></li>
+                        <li><i class="fas fa-envelope"></i><span>muktar15-2298@diu.edu.bd</span></li>
+                        <li><i class="fas fa-home"></i><span>Dhaka,Bangladesh</span></li>
+                        <li><i class="fas fa-map-marker-alt"></i><span>Ashuliya ,Dattapara,Savar</span></li>
+                    </ul>
+                </div>
+                <div class=" col-lg-3 social">
+                    <ul>
+                        <h6>Follow Us On</h6>
+                        <li><a href="#"><i class="fab fa-facebook-square"></i> <span>FaceBook</span></a></li>
+                        <li><a href="#"><i class="fab fa-twitter-square"></i> <span>Twitter</span></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin"></i><span>LinkedIn</span></a></li>
+                        <li><a href="#"><i class="fab fa-youtube"></i><span>YouTube</span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <p class="text-center text-muted">All rights reserved &copy; 2021 || Nishat Hasan Muktar</p>
+    </footer>
+    <!-- Footer End -->
+
+
 
 
     <!-- Bootstrap JS -->
