--- a/index.html
+++ b/index.html
@@ -191,20 +191,57 @@
     <!-- schedule Section End -->
 
 
+    <!-- Users Feedback Section Start -->
+    <section class="user-feedback">
+        <div class="container">
+            <h3 class='text-center'>Our User Feedback</h3>
+            <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla doloremque delectus
+                maxime quo asperiores, quod enim illo nihil? Illum facere, nihil eos voluptas libero possimus minus
+                reiciendis porro cupiditate illo!</p>
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium ducimus voluptatum aperiam
+                        fuga velit officia nam quaerat beatae ratione id. <br> <i class="fab fa-twitter"></i>
+                        <span>@nishat2298</span>
+                    </p>
+                    <img src="./images/my-1.png" alt="">
+                </div>
+                <!-- Col-2 -->
+                <div class="col-md-4 col-up">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium ducimus voluptatum aperiam
+                        fuga velit officia nam quaerat beatae ratione id. <br> <i class="fab fa-twitter"></i>
+                        <span>@nishat2298</span>
+                    </p>
+                    <img src="./images/my-2.png" alt="">
+                </div>
+                <!-- Col-3 -->
+                <div class="col-md-4">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium ducimus voluptatum aperiam
+                        fuga velit officia nam quaerat beatae ratione id. <br> <i class="fab fa-twitter"></i>
+                        <span>@nishat2298</span>
+                    </p>
+                    <img src="./images/my-1.png" alt="">
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Users Feedback Section End -->
+
     <!-- Search Start -->
-    <div class="container text-center search">
+    <!-- <div class="container text-center search">
         <h3>Join Our Free Trial !</h3>
         <p>Follow our newsleter and get 30 days free trial</p>
 
         <form class="form">
             <div class="input-group" style="width:50%">
                 <input type="text" class="form-control" placeholder="Enter your email.." aria-label="Username"
-                    aria-describedby="basic-addon1">
-                <span class="input-group-text" id="basic-addon1">Subscribe</span>
+                    >
+                <span class="input-group-text" id="basic-addon1">Find Out</span>
             </div>
         </form>
 
-    </div>
+    </div> -->
     <!-- Search End -->
 
 
@@ -217,19 +254,20 @@
                     <div class="card">
                         <img src="./images/fitness/logo.png" alt="" class="card-img">
                         <div class="card-body">
-                            <p class="card-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio id
-                                ipsa consequatur alias laborum maiores assumenda quo minus repellat perferendis iure
-                                sequi quidem eaque, iusto ea similique sapiente. Ratione, enim. </p>
+                            <p class="card-text"> <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Distinctio id
+                                    ipsa consequatur alias laborum maiores assumenda quo minus repellat perferendis iure
+                                    sequi quidem eaque, iusto ea similique sapiente. Ratione, enim.</span> </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 feature">
                     <ul>
                         <h6>Features</h6>
-                        <li>Certified Trainers</li>
-                        <li>Free Consultation</li>
-                        <li>Flexible Time</li>
-                        <li>30 Days Free Trials</li>
+                        <li><span>Certified Trainers</span></li>
+                        <li><span>Free Consultation</span></li>
+                        <li><span>Flexible Time</span></li>
+                        <li><span>30 Days Free Trials</span></li>
                     </ul>
                 </div>
                 <div class=" col-lg-3 contact">
